2010-01-20  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/AlSource.cxx:
	* Rnr/GL/AlSource_GL_Rnr.cxx:
	* Rnr/GL/AlSource_GL_Rnr.h:
	Beautify.

2010-01-11  Matevz Tadel  <matevz.tadel@ijs.si>

	Add support for reading ogg files.

	* Glasses/AlBuffer.cxx:
	Check file type by extension (wav, ogg).
	Add code for reading of ogg files.

	* Makefile:
	Link also against libvorbisfile.

2010-01-10  Matevz Tadel  <matevz.tadel@ijs.si>

	Improve handling of AL buffers and sources.

	* Glasses/AlBuffer.cxx:
	* Glasses/AlBuffer.h:
	Add data-members that hold buffer frequency, size, number of bits,
	number of channels, and default duration of the sample.
	Fill them after loading.

	* Glasses/AlSource.cxx:
	* Glasses/AlSource.h:
	Add functions:
	  void UnqueueBuffers(Int_t count=1);
	  void UnqueueAllBuffers();
	Allow mPitch to be set up to 1000 (was limited to 1 before).
	Turn off looping when source is stopped.

2009-12-30  Matevz Tadel  <matevz.tadel@ijs.si>

	Shutdown OpenAL at libset shutdown.

	* Glasses/AlContext.cxx:
	Add function
	  void libAudio1_GLED_user_shutdown();
	that calls alutExit() and a pointer variable pointing to it:
	  void* Audio1_GLED_user_shutdown;
	that is needed to demangle it.

2009-12-25  Matevz Tadel  <matevz.tadel@ijs.si>

	Fixes for OSX build.

	* Audio1/Audio1.cxx:
	* Glasses/AlBuffer.cxx:
	* Glasses/AlContext.cxx:
	* Glasses/AlContext.h:
	* Glasses/AlListener.cxx:
	* Glasses/AlSource.cxx:
	* Rnr/GL/AlListener_GL_Rnr.cxx:
	* Rnr/GL/AlSource_GL_Rnr.cxx:
	Always just include alut.h. On OSX AL includes are in OpenAL and
	we really don't care that much.
	Hide alut.h from CINT.

	* Makefile:
	On OSX use '-framework OpenAL' instead of '-lopenal'.

2009-12-16  Matevz Tadel  <matevz.tadel@ijs.si>

	* Rnr/GL/AlSource_GL_Rnr.cxx:
	Bugfix - LT_FollowParents was taking wrong transformation.

2009-12-04  Matevz Tadel  <matevz.tadel@ijs.si>

	* Glasses/AlSource.cxx:
	* Glasses/AlSource.h:
	* Rnr/GL/AlSource_GL_Rnr.cxx:
	* Rnr/GL/AlSource_GL_Rnr.h: